[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/ui/UILayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit-17.png" type="Texture" id=2]
[ext_resource path="res://src/main/SessionSetup.gd" type="Script" id=3]
[ext_resource path="res://src/main/session_setup/MatchScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/main/session_setup/ReadyScreen.tscn" type="PackedScene" id=5]

[node name="SessionSetup" type="Node2D"]
script = ExtResource( 3 )

[node name="BgTitle" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UILayer" parent="." instance=ExtResource( 1 )]

[node name="MatchScreen" parent="UILayer/Screens" index="0" instance=ExtResource( 4 )]
visible = false

[node name="ReadyScreen" parent="UILayer/Screens" index="1" instance=ExtResource( 5 )]

[node name="Overlay" parent="UILayer" index="1"]
margin_bottom = -2.0

[node name="Message" parent="UILayer/Overlay" index="1"]
anchor_right = 1.0
anchor_bottom = 0.100186
margin_right = 1920.0
margin_bottom = 108.0

[node name="SoundOnButton" parent="UILayer/Overlay/HBoxContainer" index="2"]
margin_right = 1896.32

[node name="Alert" parent="UILayer/Overlay" index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 486.0
margin_top = 226.0
margin_right = 2891.0
margin_bottom = 1392.39

[connection signal="back_button" from="UILayer" to="." method="_on_UILayer_back_button"]
[connection signal="room_auto_start" from="UILayer/Screens/ReadyScreen" to="." method="_on_ReadyScreen_room_auto_start"]

[editable path="UILayer"]
